--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 10-27-04: JCon: Fixed Chara:Stat map and parameter related things. [Tsusai]
- 10-27-04: JCon: Character ID changing via Character:Stats disabled.  Read-only. [Tsusai]
- 10-27-04: JCon: Name changing via Character:Stats disabled.  Read-only. [Tsusai]
- 10-27-04: Commented out MapUnload from INI since it's disabled. [Tsusai]
- 10-26-04: REED: Proper deletion of characters from character zone. [AlexKreuz]
- 10-26-04: REED: Proper deletion of Pets on Character delete. [AlexKreuz]
- 10-26-04: REED: Restructured Deletion Algorithms (66%). [AlexKreuz]
- 10-26-04: Finalised the improvements to #warp. [Trihan]
- 10-26-04: Added ini option to turn off auto-dye of Adv 2nd classes for those using sprites. [Tsusai]
- 10-25-04: JCon: Can save and add new character variables. [Tsusai]
- 10-25-04: JCon: Can view and delete Character variables. [Tsusai]
- 10-25-04: JCon: Restarts WAC if WAC is on to make port change work. [Tsusai]
- 10-25-04: WAC: Fixed account submission %40 instead of @ problem for non-IE browsers. [Tsusai]
- 10-21-04: JCon: Character skill modification save finish. [Tsusai]
- 10-20-04: Free'd a stringlist in script.pas. [Tsusai]
- 10-20-04: JCon: Character skills & level viewable. [Tsusai]
- 10-20-04: Another OnTouch improvement. OnTouch basically complete. [Tsusai]
- 10-19-04: OnTouch FUNCTIONAL. [Tsusai]
- 10-19-04: Added NPC header modification for OnTouch. Need char move modification. [Tsusai]
- 10-18-04: NPC Set logic fix. [Tsusai]
- 10-18-04: NPC Set can modify STR, AGI, VIT, etc. [Tsusai]
- 10-18-04: Reactivated and fixed NPC set option. [Tsusai]
- 10-18-04: Commented out non working, unused pre variables. [Tsusai]
- 10-17-04: Cleaned up the structure of #warp. [Trihan]
- 10-17-04: Cleaned up the structure of #goto and #summon. [Trihan]